Global array for dummy data so it can be mutated
