# restapi/operations/books/post_books_responses.go
@@ -1,0 +1,46 @@
+package books
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+/*PostBooksOK The created book
+
+swagger:response postBooksOK
+*/
+type PostBooksOK struct {
+
+	// In: body
+	Payload PostBooksOKBody `json:"body,omitempty"`
+}
+
+// NewPostBooksOK creates PostBooksOK with default headers values
+func NewPostBooksOK() *PostBooksOK {
+	return &PostBooksOK{}
+}
+
+// WithPayload adds the payload to the post books o k response
+func (o *PostBooksOK) WithPayload(payload PostBooksOKBody) *PostBooksOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post books o k response
+func (o *PostBooksOK) SetPayload(payload PostBooksOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostBooksOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
